# ap-preserve-header

./: .gitattributes  Makefile  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: coverage.yml  format.yml
ap_preserve_header/: preserve_headers.py
tests/: test_preserve_headers.py
tests/fixtures/: sample.fits  sample.xisf
